[package]
name = "rust_java"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.32.1", features = ["lazy"]}
jni = { version = "0.21.1" }
tch = { version = "0.13.0" }

[lib]
crate_type = ["lib", "cdylib"]
